# cpp-utility

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: mac.yaml  ubuntu_20.yaml  ubuntu_22.yaml  ubuntu_24.yaml  unit_tests.yaml
cmake/: c_flag_overrides.cmake  cxx_flag_overrides.cmake
design_doc/: lock.md  random.md  thread.md
include/: lock.hpp
include/dbgroup/: constants.hpp  types.hpp
include/dbgroup/benchmark/: stop_watch.hpp
include/dbgroup/index/: utility.hpp
include/dbgroup/lock/: common.hpp  mcs_lock.hpp  omcs_lock.hpp  optimistic_lock.hpp  optiql.hpp  pessimistic_lock.hpp  utility.hpp
include/dbgroup/lock/component/: queue_node_holder.hpp
include/dbgroup/random/: zipf.hpp
include/dbgroup/thread/: common.hpp  epoch_guard.hpp  epoch_manager.hpp  id_manager.hpp
include/dbgroup/thread/component/: epoch.hpp
include/lock/: common.hpp  optimistic_lock.hpp  pessimistic_lock.hpp
include/random/: zipf.hpp
include/thread/: common.hpp  epoch_guard.hpp  epoch_manager.hpp  id_manager.hpp
include/thread/component/: epoch.hpp  epoch_guard.hpp
src/benchmark/: stop_watch.cpp
src/lock/: mcs_lock.cpp  omcs_lock.cpp  optimistic_lock.cpp  optiql.cpp  pessimistic_lock.cpp
src/random/: zipf.cpp
src/thread/: epoch_guard.cpp  epoch_manager.cpp  id_manager.cpp
src/thread/component/: epoch.cpp  epoch_guard.cpp
test/: CMakeLists.txt  common.hpp  serial_test.cpp
test/benchmark/: CMakeLists.txt  stop_watch_test.cpp
test/index/: CMakeLists.txt  utility_test.cpp
test/lock/: CMakeLists.txt  common.hpp  mcs_lock_test.cpp  omcs_lock_test.cpp  omcs_test.cpp  optimistic_lock_test.cpp  optiql_test.cpp  pessimistic_lock_test.cpp
test/random/: CMakeLists.txt  zipf_test.cpp
test/thread/: CMakeLists.txt  epoch_guard_test.cpp  epoch_manager_test.cpp  epoch_test.cpp  id_manager_test.cpp
